Fix z-index value for main screen overlay in CSS

--- a/css/components/main-screen.css
+++ b/css/components/main-screen.css
@@ -4,7 +4,7 @@
     background-color: rgba(0, 0, 0, .3);
     opacity: 0;
     pointer-events: none;
-
+    z-index: 80;
     cursor: pointer;
 
     transition: opacity .6s;
